--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  background-color: black; /* ✅ ADD THIS */
 }
 
 .slide {
@@ -12,7 +13,8 @@
   top: 0;
   left: 100%;
   opacity: -1;
-  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+  transition: transform 1s ease-in-out, opacity 0.7s ease-in-out;
+  background-color: black; /* ✅ ADD THIS */
 }
 
 .slide.active {
