--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -38,7 +38,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.596); /* Adjust opacity to control darkness */
+  background: rgba(0, 0, 0, 0.596);
+  /* Adjust opacity to control darkness */
   z-index: 0;
 }
 
@@ -50,12 +51,46 @@
   transform: translate(-50%, -50%);
   text-align: center;
   color: white;
-  z-index: 1; /* Ensures text appears above overlay */
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Makes text clearer */
+  z-index: 1;
+  /* Ensures text appears above overlay */
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  /* Makes text clearer */
   padding: 20px;
   border-radius: 10px;
   width: 100%;
   max-width: 1060px;
+}
+
+.indicators {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  z-index: 10;
+  margin: 0 auto;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.active-dot {
+  background-color: #fff;
+  /* Change to your preferred active color */
+  transform: scale(1.5);
+  /* Makes the active dot 50% larger */
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
 }
 
 h2 {
@@ -66,4 +101,88 @@ h2 {
 p {
   font-size: 1.2rem;
   margin-bottom: 20px;
+}
+
+.explore-menu-btn {
+  display: inline-block;
+  padding: 12px 30px;
+  text-transform: uppercase;
+  color: white;
+  background-color: transparent;
+  border: 2px solid white;
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
+  margin-top: 20px;
+  text-decoration: none;
+}
+
+.explore-menu-btn:hover {
+  transform: translateY(-3px);
+}
+
+@media (max-width: 768px) {
+  .indicators {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    z-index: 10;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  .dot {
+    height: 10px;
+    width: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  .content h2 {
+    font-size: 2rem;
+  }
+
+  .content p {
+    font-size: 1rem;
+    padding: 0 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .indicators {
+    bottom: 15px;
+    gap: 10px;
+  }
+
+  .dot {
+    height: 8px;
+    width: 8px;
+  }
+
+  .content h2 {
+    font-size: 1.8rem;
+  }
+
+  .content h4 {
+    font-size: 1rem;
+  }
+
+  .content p {
+    font-size: 0.9rem;
+  }
+
+  .explore-menu-btn {
+    padding: 10px 20px;
+    font-size: 0.9rem;
+  }
 }
